@@ -1,2 +1,4 @@
-(fn get-current-time ()
-  (time))
+(fn milliseconds-since-1970 ()
+  (!= (explode " " (microtime))
+    (+ (integer (* 1000 (aref ! 1)))
+       (integer (round (* 1000 (aref ! 0)))))))
